--- a/Gas/CMakeLists.txt
+++ b/Gas/CMakeLists.txt
@@ -4,7 +4,9 @@ add_library(Gas OBJECT
     "include/MF.h"
     "include/particle.h"
     "include/model.h"
+    "include/parser.h"
 
     "src/particle.cpp"
     "src/model.cpp"
+    "src/parser.cpp"
 )
